fixed nav-copy-code btn alignment

--- a/main.css
+++ b/main.css
@@ -254,8 +254,7 @@ body {
   text-decoration: none; }
 
 #navBtnCopy {
-  width: 129px;
-  text-align: left; }
+  width: 129px; }
 
 .compListItem {
   margin-bottom: 2rem; }
